@@ -26,8 +26,8 @@
 
 .. versionadded:: 2.0.0
 
-.. versionchanged:: 2.4.0
-   removed type and mass guessing (guessing takes place now inside universe)
+.. versionchanged:: 2.5.0
+   removed type and mass guessing (guessing takes place now inside the universe only)
 
 
 Converts an
