@@ -519,7 +519,7 @@ class TopologyAttr(object, metaclass=_TopologyAttrMeta):
     @classmethod
     def is_value_missing(self, value):
         """check if an attribute has a missing value
-        .. versionadded:: 2.4.0
+        .. versionadded:: 2.5.0
         """
         if hasattr(self, 'missing_value_label'):
             return value == self.missing_value_label
@@ -1925,6 +1925,9 @@ class Masses(AtomAttr):
 
     @classmethod
     def is_value_missing(self, value):
+        """check if an attribute has a missing value
+        .. versionadded:: 2.5.0
+        """
         return np.isnan(value)
 
 
