@@ -50,8 +50,8 @@ class ConfigParser(TopologyReaderBase):
     """DL_Poly CONFIG file parser
 
     .. versionadded:: 0.10.1
-    .. versionchanged:: 2.4.0
-      removed type and mass guessing (guessing takes place now inside universe)
+    .. versionchanged:: 2.5.0
+      removed type and mass guessing (guessing takes place now inside the universe only)
     """
     format = 'CONFIG'
 
