@@ -67,8 +67,8 @@ class FHIAIMSParser(TopologyReaderBase):
     Creates the following attributes:
      - Atomnames
 
-    .. versionchanged:: 2.4.0
-      removed type and mass guessing (guessing takes place now inside universe)
+    .. versionchanged:: 2.5.0
+      removed type and mass guessing (guessing takes place now inside the universe only)
     """
     format = ['IN', 'FHIAIMS']
 
