@@ -125,8 +125,8 @@ class MOL2Parser(TopologyReaderBase):
        Parse elements from atom types.
     .. versionchanged:: 2.2.0
        Read MOL2 files with optional columns omitted.
-    .. versionchanged:: 2.4.0
-      removed mass guessing (guessing takes place now inside universe)
+    .. versionchanged:: 2.5.0
+      removed mass guessing (guessing takes place now inside the universe only)
 
     """
     format = 'MOL2'
