@@ -191,8 +191,8 @@ class PDBParser(TopologyReaderBase):
        Any formal charges not set are assumed to have a value of 0.
        Raise `UserWarning` instead `RuntimeError`
        when CONECT records are corrupt.
-    .. versionchanged:: 2.4.0
-      removed type and mass guessing (guessing takes place now inside universe)
+    .. versionchanged:: 2.5.0
+      removed type and mass guessing (guessing takes place now inside the universe only)
 
     """
     format = ['PDB', 'ENT']
