@@ -65,8 +65,8 @@ class XYZParser(TopologyReaderBase):
 
     .. versionchanged: 1.0.0
        Store elements attribute, based on XYZ atom names
-    .. versionchanged:: 2.4.0
-      removed type and mass guessing (guessing takes place now inside universe)
+    .. versionchanged:: 2.5.0
+      removed type and mass guessing (guessing takes place now inside the universe only)
 
     """
     format = 'XYZ'
